<resources>
    <string name="app_name">Antenantal</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="load">Loading...</string>
    <string name="menu_daily">Pregnancy Day By Day Tips</string>
    <string name="menu_weekly">Pregnancy Week By Week Tips</string>
    <string name="menu_monthly">Pregnancy Month By Month Tips</string>
    <string name="menu_trimester">Pregnancy Trimester\'s Tips</string>
    <string name="menu_health">Pregnancy Health Tips</string>
    <string name="menu_fetal">Fetal Development Pictures</string>
    <string name="menu_nutrition">Nutrition Tips In Pregnancy</string>
    <string name="subtitle">ABUTH Antenatal APP</string>
    <string name="menu_about">About App</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
