<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/day"
            android:icon="@drawable/ic_plan"
            android:title="@string/menu_daily" />
        <item
            android:id="@+id/week"
            android:icon="@drawable/ic_plan"
            android:title="@string/menu_weekly" />
        <item
            android:id="@+id/month"
            android:icon="@drawable/ic_plan"
            android:title="@string/menu_monthly" />
        <item
            android:id="@+id/trimester"
            android:icon="@drawable/ic_plan"
            android:title="@string/menu_trimester" />
        <item
            android:id="@+id/fetal"
            android:icon="@drawable/ic_pregnant"
            android:title="@string/menu_fetal" />

        <item
            android:id="@+id/health"
            android:icon="@drawable/ic_doctor"
            android:title="@string/menu_health" />

        <item
            android:id="@+id/nutrition"
            android:icon="@drawable/ic_diet"
            android:title="@string/menu_nutrition" />

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_editnav"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/closenav"
            android:title="Sign Out"
            android:orderInCategory="300"
            android:icon="@drawable/ic_logoutnav"/>
    </group>

</menu>
